src/ANTLR/PQL2Parser.ts
// Generated from ./PQL2.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { PQL2Listener } from "./PQL2Listener";

export class PQL2Parser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly T__4 = 5;
	public static readonly T__5 = 6;
	public static readonly T__6 = 7;
	public static readonly T__7 = 8;
	public static readonly OR = 9;
	public static readonly AND = 10;
	public static readonly NOT = 11;
	public static readonly YES = 12;
	public static readonly NO = 13;
	public static readonly ALL = 14;
	public static readonly OperatorSynonymOR = 15;
	public static readonly OperatorNoCapFraming = 16;
	public static readonly OperatorFraming = 17;
	public static readonly OperatorInfixSlopWord = 18;
	public static readonly OperatorInfixSlopSentence = 19;
	public static readonly OperatorInfixNotSentence = 20;
	public static readonly OperatorInfixSlopParagraph = 21;
	public static readonly OperatorInfixNotParagraph = 22;
	public static readonly OperatorInfixField = 23;
	public static readonly OperatorInfixNotFieldORParagraph = 24;
	public static readonly OperatorInfixNOV = 25;
	public static readonly OperatorRelational = 26;
	public static readonly OperatorNoCap = 27;
	public static readonly Selector = 28;
	public static readonly Weight = 29;
	public static readonly FieldOrTerm = 30;
	public static readonly TermWithExclusion = 31;
	public static readonly ORDERED_GROUP = 32;
	public static readonly UNORDERED_GROUP = 33;
	public static readonly WORD = 34;
	public static readonly DISTANCE = 35;
	public static readonly SENTENCE = 36;
	public static readonly PARAGRAPH = 37;
	public static readonly PARAGRAPH2 = 38;
	public static readonly FIELD = 39;
	public static readonly NOT_IN_SENTENCE = 40;
	public static readonly NOT_IN_PARAGRAPH = 41;
	public static readonly NOT_IN_PARAGRAPH2 = 42;
	public static readonly NOT_IN_FIELD = 43;
	public static readonly NO_OVERLAPPING = 44;
	public static readonly IN = 45;
	public static readonly WS = 46;
	public static readonly COMMENT = 47;
	public static readonly RULE_query = 0;
	public static readonly RULE_csvBoolean = 1;
	public static readonly RULE_infixBoolean = 2;
	public static readonly RULE_infixProximity = 3;
	public static readonly RULE_implicitInfixProximity = 4;
	public static readonly RULE_synonymOr = 5;
	public static readonly RULE_prefixOrRelational = 6;
	public static readonly RULE_expressionFraming = 7;
	public static readonly RULE_expressionNoCapFraming = 8;
	public static readonly RULE_expressionPar = 9;
	public static readonly RULE_expressionList = 10;
	public static readonly RULE_term = 11;
	public static readonly RULE_selector = 12;
	public static readonly RULE_weight = 13;
	public static readonly RULE_fieldRule = 14;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"query", "csvBoolean", "infixBoolean", "infixProximity", "implicitInfixProximity", 
		"synonymOr", "prefixOrRelational", "expressionFraming", "expressionNoCapFraming", 
		"expressionPar", "expressionList", "term", "selector", "weight", "fieldRule",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "','", "'='", "'>'", "'>='", "'<'", "'<='", "')'", "'('", undefined, 
		undefined, undefined, undefined, undefined, undefined, "'|'", undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, "'&'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, "OR", "AND", "NOT", "YES", "NO", "ALL", "OperatorSynonymOR", 
		"OperatorNoCapFraming", "OperatorFraming", "OperatorInfixSlopWord", "OperatorInfixSlopSentence", 
		"OperatorInfixNotSentence", "OperatorInfixSlopParagraph", "OperatorInfixNotParagraph", 
		"OperatorInfixField", "OperatorInfixNotFieldORParagraph", "OperatorInfixNOV", 
		"OperatorRelational", "OperatorNoCap", "Selector", "Weight", "FieldOrTerm", 
		"TermWithExclusion", "ORDERED_GROUP", "UNORDERED_GROUP", "WORD", "DISTANCE", 
		"SENTENCE", "PARAGRAPH", "PARAGRAPH2", "FIELD", "NOT_IN_SENTENCE", "NOT_IN_PARAGRAPH", 
		"NOT_IN_PARAGRAPH2", "NOT_IN_FIELD", "NO_OVERLAPPING", "IN", "WS", "COMMENT",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(PQL2Parser._LITERAL_NAMES, PQL2Parser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return PQL2Parser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "PQL2.g4"; }

	// @Override
	public get ruleNames(): string[] { return PQL2Parser.ruleNames; }

	// @Override
	public get serializedATN(): string { return PQL2Parser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(PQL2Parser._ATN, this);
	}
	// @RuleVersion(0)
	public query(): QueryContext {
		let _localctx: QueryContext = new QueryContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, PQL2Parser.RULE_query);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 31;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << PQL2Parser.T__7) | (1 << PQL2Parser.NOT) | (1 << PQL2Parser.OperatorNoCapFraming) | (1 << PQL2Parser.OperatorFraming) | (1 << PQL2Parser.OperatorNoCap) | (1 << PQL2Parser.Selector) | (1 << PQL2Parser.FieldOrTerm) | (1 << PQL2Parser.TermWithExclusion))) !== 0)) {
				{
				this.state = 30;
				this.csvBoolean();
				}
			}

			this.state = 33;
			this.match(PQL2Parser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public csvBoolean(): CsvBooleanContext {
		let _localctx: CsvBooleanContext = new CsvBooleanContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, PQL2Parser.RULE_csvBoolean);
		let _la: number;
		try {
			_localctx = new CsvBooleanExpressionContext(_localctx);
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 35;
			this.infixBoolean(0);
			this.state = 40;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === PQL2Parser.T__0) {
				{
				{
				this.state = 36;
				this.match(PQL2Parser.T__0);
				this.state = 37;
				this.infixBoolean(0);
				}
				}
				this.state = 42;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}

	public infixBoolean(): InfixBooleanContext;
	public infixBoolean(_p: number): InfixBooleanContext;
	// @RuleVersion(0)
	public infixBoolean(_p?: number): InfixBooleanContext {
		if (_p === undefined) {
			_p = 0;
		}

		let _parentctx: ParserRuleContext = this._ctx;
		let _parentState: number = this.state;
		let _localctx: InfixBooleanContext = new InfixBooleanContext(this._ctx, _parentState);
		let _prevctx: InfixBooleanContext = _localctx;
		let _startState: number = 4;
		this.enterRecursionRule(_localctx, 4, PQL2Parser.RULE_infixBoolean, _p);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 51;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 2, this._ctx) ) {
			case 1:
				{
				_localctx = new UnaryBooleanExpressionContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;

				this.state = 44;
				(_localctx as UnaryBooleanExpressionContext)._operator = this.match(PQL2Parser.NOT);
				this.state = 45;
				this.infixBoolean(6);
				}
				break;

			case 2:
				{
				_localctx = new PresenceExpressionContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 46;
				(_localctx as PresenceExpressionContext)._field = this.fieldRule();
				this.state = 47;
				this.match(PQL2Parser.T__1);
				this.state = 48;
				(_localctx as PresenceExpressionContext)._presense = this._input.LT(1);
				_la = this._input.LA(1);
				if (!((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << PQL2Parser.YES) | (1 << PQL2Parser.NO) | (1 << PQL2Parser.ALL))) !== 0))) {
					(_localctx as PresenceExpressionContext)._presense = this._errHandler.recoverInline(this);
				} else {
					if (this._input.LA(1) === Token.EOF) {
						this.matchedEOF = true;
					}

					this._errHandler.reportMatch(this);
					this.consume();
				}
				}
				break;

			case 3:
				{
				_localctx = new InfixProximityLinkContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 50;
				this.infixProximity(0);
				}
				break;
			}
			this._ctx._stop = this._input.tryLT(-1);
			this.state = 64;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 4, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					if (this._parseListeners != null) {
						this.triggerExitRuleEvent();
					}
					_prevctx = _localctx;
					{
					this.state = 62;
					this._errHandler.sync(this);
					switch ( this.interpreter.adaptivePredict(this._input, 3, this._ctx) ) {
					case 1:
						{
						_localctx = new InfixBooleanExpressionContext(new InfixBooleanContext(_parentctx, _parentState));
						this.pushNewRecursionContext(_localctx, _startState, PQL2Parser.RULE_infixBoolean);
						this.state = 53;
						if (!(this.precpred(this._ctx, 5))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 5)");
						}
						this.state = 54;
						(_localctx as InfixBooleanExpressionContext)._operator = this.match(PQL2Parser.AND);
						this.state = 55;
						this.infixBoolean(6);
						}
						break;

					case 2:
						{
						_localctx = new InfixBooleanExpressionContext(new InfixBooleanContext(_parentctx, _parentState));
						this.pushNewRecursionContext(_localctx, _startState, PQL2Parser.RULE_infixBoolean);
						this.state = 56;
						if (!(this.precpred(this._ctx, 4))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 4)");
						}
						this.state = 57;
						(_localctx as InfixBooleanExpressionContext)._operator = this.match(PQL2Parser.OR);
						this.state = 58;
						this.infixBoolean(5);
						}
						break;

					case 3:
						{
						_localctx = new InfixBooleanExpressionContext(new InfixBooleanContext(_parentctx, _parentState));
						this.pushNewRecursionContext(_localctx, _startState, PQL2Parser.RULE_infixBoolean);
						this.state = 59;
						if (!(this.precpred(this._ctx, 3))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 3)");
						}
						this.state = 60;
						(_localctx as InfixBooleanExpressionContext)._operator = this.match(PQL2Parser.NOT);
						this.state = 61;
						this.infixBoolean(4);
						}
						break;
					}
					}
				}
				this.state = 66;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 4, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public infixProximity(): InfixProximityContext;
	public infixProximity(_p: number): InfixProximityContext;
	// @RuleVersion(0)
	public infixProximity(_p?: number): InfixProximityContext {
		if (_p === undefined) {
			_p = 0;
		}

		let _parentctx: ParserRuleContext = this._ctx;
		let _parentState: number = this.state;
		let _localctx: InfixProximityContext = new InfixProximityContext(this._ctx, _parentState);
		let _prevctx: InfixProximityContext = _localctx;
		let _startState: number = 6;
		this.enterRecursionRule(_localctx, 6, PQL2Parser.RULE_infixProximity, _p);
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			{
			_localctx = new ImplicitInfixProximityLinkContext(_localctx);
			this._ctx = _localctx;
			_prevctx = _localctx;

			this.state = 68;
			this.implicitInfixProximity();
			}
			this._ctx._stop = this._input.tryLT(-1);
			this.state = 96;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 6, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					if (this._parseListeners != null) {
						this.triggerExitRuleEvent();
					}
					_prevctx = _localctx;
					{
					this.state = 94;
					this._errHandler.sync(this);
					switch ( this.interpreter.adaptivePredict(this._input, 5, this._ctx) ) {
					case 1:
						{
						_localctx = new InfixProximityExpressionContext(new InfixProximityContext(_parentctx, _parentState));
						this.pushNewRecursionContext(_localctx, _startState, PQL2Parser.RULE_infixProximity);
						this.state = 70;
						if (!(this.precpred(this._ctx, 9))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 9)");
						}
						this.state = 71;
						(_localctx as InfixProximityExpressionContext)._operator = this.match(PQL2Parser.OperatorInfixSlopWord);
						this.state = 72;
						this.infixProximity(10);
						}
						break;

					case 2:
						{
						_localctx = new InfixOutlineProximityExpressionContext(new InfixProximityContext(_parentctx, _parentState));
						this.pushNewRecursionContext(_localctx, _startState, PQL2Parser.RULE_infixProximity);
						this.state = 73;
						if (!(this.precpred(this._ctx, 8))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 8)");
						}
						this.state = 74;
						(_localctx as InfixOutlineProximityExpressionContext)._operator = this.match(PQL2Parser.OperatorInfixSlopSentence);
						this.state = 75;
						this.infixProximity(9);
						}
						break;

					case 3:
						{
						_localctx = new InfixProximityExpressionContext(new InfixProximityContext(_parentctx, _parentState));
						this.pushNewRecursionContext(_localctx, _startState, PQL2Parser.RULE_infixProximity);
						this.state = 76;
						if (!(this.precpred(this._ctx, 7))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 7)");
						}
						this.state = 77;
						(_localctx as InfixProximityExpressionContext)._operator = this.match(PQL2Parser.OperatorInfixNotSentence);
						this.state = 78;
						this.infixProximity(8);
						}
						break;

					case 4:
						{
						_localctx = new InfixOutlineProximityExpressionContext(new InfixProximityContext(_parentctx, _parentState));
						this.pushNewRecursionContext(_localctx, _startState, PQL2Parser.RULE_infixProximity);
						this.state = 79;
						if (!(this.precpred(this._ctx, 6))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 6)");
						}
						this.state = 80;
						(_localctx as InfixOutlineProximityExpressionContext)._operator = this.match(PQL2Parser.OperatorInfixSlopParagraph);
						this.state = 81;
						this.infixProximity(7);
						}
						break;

					case 5:
						{
						_localctx = new InfixProximityExpressionContext(new InfixProximityContext(_parentctx, _parentState));
						this.pushNewRecursionContext(_localctx, _startState, PQL2Parser.RULE_infixProximity);
						this.state = 82;
						if (!(this.precpred(this._ctx, 5))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 5)");
						}
						this.state = 83;
						(_localctx as InfixProximityExpressionContext)._operator = this.match(PQL2Parser.OperatorInfixNotParagraph);
						this.state = 84;
						this.infixProximity(6);
						}
						break;

					case 6:
						{
						_localctx = new InfixOutlineProximityExpressionContext(new InfixProximityContext(_parentctx, _parentState));
						this.pushNewRecursionContext(_localctx, _startState, PQL2Parser.RULE_infixProximity);
						this.state = 85;
						if (!(this.precpred(this._ctx, 4))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 4)");
						}
						this.state = 86;
						(_localctx as InfixOutlineProximityExpressionContext)._operator = this.match(PQL2Parser.OperatorInfixField);
						this.state = 87;
						this.infixProximity(5);
						}
						break;

					case 7:
						{
						_localctx = new InfixProximityExpressionContext(new InfixProximityContext(_parentctx, _parentState));
						this.pushNewRecursionContext(_localctx, _startState, PQL2Parser.RULE_infixProximity);
						this.state = 88;
						if (!(this.precpred(this._ctx, 3))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 3)");
						}
						this.state = 89;
						(_localctx as InfixProximityExpressionContext)._operator = this.match(PQL2Parser.OperatorInfixNotFieldORParagraph);
						this.state = 90;
						this.infixProximity(4);
						}
						break;

					case 8:
						{
						_localctx = new InfixProximityExpressionContext(new InfixProximityContext(_parentctx, _parentState));
						this.pushNewRecursionContext(_localctx, _startState, PQL2Parser.RULE_infixProximity);
						this.state = 91;
						if (!(this.precpred(this._ctx, 2))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 2)");
						}
						this.state = 92;
						(_localctx as InfixProximityExpressionContext)._operator = this.match(PQL2Parser.OperatorInfixNOV);
						this.state = 93;
						this.infixProximity(3);
						}
						break;
					}
					}
				}
				this.state = 98;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 6, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public implicitInfixProximity(): ImplicitInfixProximityContext {
		let _localctx: ImplicitInfixProximityContext = new ImplicitInfixProximityContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, PQL2Parser.RULE_implicitInfixProximity);
		try {
			let _alt: number;
			_localctx = new ImplicitInfixOutlineProximityExpressionContext(_localctx);
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 99;
			this.synonymOr();
			this.state = 103;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 7, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					{
					{
					this.state = 100;
					this.synonymOr();
					}
					}
				}
				this.state = 105;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 7, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public synonymOr(): SynonymOrContext {
		let _localctx: SynonymOrContext = new SynonymOrContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, PQL2Parser.RULE_synonymOr);
		try {
			let _alt: number;
			this.state = 114;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 9, this._ctx) ) {
			case 1:
				_localctx = new SynonymBooleanOrExpressionContext(_localctx);
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 106;
				this.prefixOrRelational(0);
				this.state = 109;
				this._errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						this.state = 107;
						(_localctx as SynonymBooleanOrExpressionContext)._operator = this.match(PQL2Parser.OperatorSynonymOR);
						this.state = 108;
						this.prefixOrRelational(0);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					this.state = 111;
					this._errHandler.sync(this);
					_alt = this.interpreter.adaptivePredict(this._input, 8, this._ctx);
				} while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER);
				}
				break;

			case 2:
				_localctx = new PrefixOrRelationalLinkContext(_localctx);
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 113;
				this.prefixOrRelational(0);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}

	public prefixOrRelational(): PrefixOrRelationalContext;
	public prefixOrRelational(_p: number): PrefixOrRelationalContext;
	// @RuleVersion(0)
	public prefixOrRelational(_p?: number): PrefixOrRelationalContext {
		if (_p === undefined) {
			_p = 0;
		}

		let _parentctx: ParserRuleContext = this._ctx;
		let _parentState: number = this.state;
		let _localctx: PrefixOrRelationalContext = new PrefixOrRelationalContext(this._ctx, _parentState);
		let _prevctx: PrefixOrRelationalContext = _localctx;
		let _startState: number = 12;
		this.enterRecursionRule(_localctx, 12, PQL2Parser.RULE_prefixOrRelational, _p);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 128;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 10, this._ctx) ) {
			case 1:
				{
				_localctx = new FramingExpressionContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;

				this.state = 117;
				this.expressionFraming();
				}
				break;

			case 2:
				{
				_localctx = new NoCapFramingExpressionContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 118;
				this.expressionNoCapFraming();
				}
				break;

			case 3:
				{
				_localctx = new EqualityExpressionContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 119;
				(_localctx as EqualityExpressionContext)._field = this.fieldRule();
				this.state = 120;
				(_localctx as EqualityExpressionContext)._operator = this._input.LT(1);
				_la = this._input.LA(1);
				if (!((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << PQL2Parser.T__1) | (1 << PQL2Parser.T__2) | (1 << PQL2Parser.T__3) | (1 << PQL2Parser.T__4) | (1 << PQL2Parser.T__5))) !== 0))) {
					(_localctx as EqualityExpressionContext)._operator = this._errHandler.recoverInline(this);
				} else {
					if (this._input.LA(1) === Token.EOF) {
						this.matchedEOF = true;
					}

					this._errHandler.reportMatch(this);
					this.consume();
				}
				this.state = 121;
				this.term();
				}
				break;

			case 4:
				{
				_localctx = new NoCapExpressionContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 123;
				(_localctx as NoCapExpressionContext)._operator = this.match(PQL2Parser.OperatorNoCap);
				this.state = 124;
				this.expressionPar();
				}
				break;

			case 5:
				{
				_localctx = new ParenthesisExpressionContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 125;
				this.expressionPar();
				}
				break;
